--- a/client/package.json
+++ b/client/package.json
@@ -10,9 +10,12 @@
   "dependencies": {
     "@formkit/auto-animate": "1.0.0-beta.1",
     "axios": "^0.27.2",
+    "firebase": "^9.9.1",
     "prop-types": "^15.6.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-hook-form": "^7.34.0",
+    "react-icons": "^4.4.0",
     "react-loader-spinner": "^5.1.5",
     "react-query": "^3.39.1",
     "react-router-dom": "6"
