--- a/client/package.json
+++ b/client/package.json
@@ -10,25 +10,25 @@
   "dependencies": {
     "@formkit/auto-animate": "1.0.0-beta.1",
     "axios": "^0.27.2",
-    "firebase": "^9.9.1",
-    "prop-types": "^15.6.0",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "react-hook-form": "^7.34.0",
-    "react-icons": "^4.4.0",
-    "react-loader-spinner": "^5.1.5",
-    "react-query": "^3.39.1",
-    "react-router-dom": "6"
+    "firebase": "^9.23.0",
+    "prop-types": "^15.8.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.50.1",
+    "react-icons": "^4.12.0",
+    "react-loader-spinner": "^5.4.5",
+    "react-query": "^3.39.3",
+    "react-router-dom": "^6.22.1"
   },
   "devDependencies": {
-    "@types/node": "^18.0.3",
-    "@types/react": "^18.0.14",
-    "@types/react-dom": "^18.0.0",
-    "@vitejs/plugin-react": "^1.3.0",
-    "autoprefixer": "^10.4.7",
-    "postcss": "^8.4.14",
-    "tailwindcss": "^3.1.4",
-    "typescript": "^4.6.3",
-    "vite": "^2.9.9"
+    "@types/node": "^18.19.19",
+    "@types/react": "^18.2.60",
+    "@types/react-dom": "^18.2.19",
+    "@vitejs/plugin-react": "^1.3.2",
+    "autoprefixer": "^10.4.17",
+    "postcss": "^8.4.35",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^4.9.5",
+    "vite": "^2.9.17"
   }
 }
